--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -367,12 +367,12 @@ dec<-spatialdecon(norm=exp,bg=bg)
 clst<-bswClst.clust(dec$prop_of_all,medianPolish=F)
 colpheno<-data.frame(VMeta %>%  dplyr::select(ID) ,
                      row.names=VMeta$Sample_ID_short)
-bswClst.plotToFile(paste0(output_path,'/EndoDecon.pdf'),clst=clst,
-                   colPheno=colpheno,
-                   # heatmapAutoZlimMethod='range',
-                   heatmapZlim = c(0,1),
-                   heatmapColorRamp = cols)
-write.table(dec$prop_of_all,paste0(output_path,'/EndoDeconProp.tsv'),sep='\t',quote=F)
+# bswClst.plotToFile(paste0(output_path,'/EndoDecon.pdf'),clst=clst,
+#                    colPheno=colpheno,
+#                    # heatmapAutoZlimMethod='range',
+#                    heatmapZlim = c(0,1),
+#                    heatmapColorRamp = cols)
+# write.table(dec$prop_of_all,paste0(output_path,'/EndoDeconProp.tsv'),sep='\t',quote=F)
 
 ##### tumor #####
 Tum <- cts[colnames(cts) %in% meta[meta$Tissue_Type=='Tumor',]$Sample_ID_short]
@@ -384,11 +384,11 @@ dec<-spatialdecon(norm=exp,bg=bg)
 clst<-bswClst.clust(dec$prop_of_all,medianPolish=F)
 colpheno<-data.frame(TMeta %>%  dplyr::select(ID) ,
                      row.names=TMeta$Sample_ID_short)
-bswClst.plotToFile(paste0(output_path,'/EpiDecon.pdf'),clst=clst,
-                   colPheno=colpheno,
-                   heatmapZlim = c(0,1),
-                   heatmapColorRamp = cols)
-write.table(dec$prop_of_all,paste0(output_path,'/EpiDeconProp.tsv'),sep='\t',quote=F)
+# bswClst.plotToFile(paste0(output_path,'/EpiDecon.pdf'),clst=clst,
+#                    colPheno=colpheno,
+#                    heatmapZlim = c(0,1),
+#                    heatmapColorRamp = cols)
+# write.table(dec$prop_of_all,paste0(output_path,'/EpiDeconProp.tsv'),sep='\t',quote=F)
 ```
 
 ### heatmap of Tumor AOIs to find clusters
@@ -431,16 +431,16 @@ matching_aoi <- matching_aoi %>%
 # see breakdown of T1T2T3 subtypes with respect to cell type deconvolution
 meta_here<-matching_aoi
 exp<- Tum %>% dplyr::select(meta_here$Tumor) %>% as.matrix()
-bg<-derive_GeoMx_background(norm=exp,probepool=rep(1,nrow(exp)),
+bg<-SpatialDecon::derive_GeoMx_background(norm=exp,probepool=rep(1,nrow(exp)),
                             negnames='Negative Probe')
-dec<-spatialdecon(norm=exp,bg=bg)
+dec<-SpatialDecon::spatialdecon(norm=exp,bg=bg)
 clst<-bswClst.clust(dec$prop_of_all,medianPolish=F)
 colpheno<-data.frame(meta_here[c('subtype')],
                      row.names=meta_here$Tumor)
-bswClst.plotToFile(paste0(output_path,'/EpiDecon_subtype.pdf'),clst=clst,
-                   colPheno=colpheno,
-                   heatmapZlim = c(0,1),
-                   heatmapColorRamp = cols)
+# bswClst.plotToFile(paste0(output_path,'/EpiDecon_subtype.pdf'),clst=clst,
+#                    colPheno=colpheno,
+#                    heatmapZlim = c(0,1),
+#                    heatmapColorRamp = cols)
 
 colpheno <- colpheno %>% 
   mutate(subtype = case_when(rownames(colpheno) %in% tumor_clst1 ~ 'T1',
@@ -470,26 +470,26 @@ cts_here <- t(scale(t(log2(cts_here)), scale = F)) # log transform, center by ge
 topGenes <- 100
 clst<-bswClst.clust(cts_here,topNSdRows=topGenes, medianPolish = T, clusterRows = T, clusterCols = T)
 
-# short format
-save_path = paste0(output_path, '/GeoMx_vessel_heatmap_short_top',topGenes,'.pdf')
-bswClst.plotToFile(path=save_path,clst=clst,
-                   colPheno=colpheno,colDendroPlot=T,colNamesTopJust=F,colNamesTopPlot=F,colPhenoColorMaps = tissue_colors,
-                   # rowPheno=rowPheno,rowDendroPlot=T,rowNamesLeftJust=F,rowNamesLeftPlot=F,rowPhenoColorMaps = Hoshida_colors, 
-                   heatmapHeight='golden',
-                   heatmapAutoZlimMethod='range',
-                   legendGex=4,fontsize = 15,legendIndent = 0, legendOffset=0.3,
-                   heatmapColorRampGamma=5,heatmapRampGex=3
-                   )
-
-# long format
-save_path = paste0(output_path, '/GeoMx_vessel_heatmap_long_top',topGenes,'.pdf')
-bswClst.plotToFile(path=save_path,clst=clst,
-                   colPheno=colpheno,colDendroPlot=T,colNamesTopJust=F,colNamesTopPlot=F,colPhenoColorMaps = tissue_colors, 
-                   # rowPheno=rowPheno,rowDendroPlot=T,rowPhenoColorMaps = Hoshida_colors,
-                   rowNamesLeftPlot=T,rowNamesRightPlot=T,
-                   legendGex=4,fontsize = 15,legendIndent = 0, legendOffset=0.3,
-                   heatmapAutoZlimMethod='range',heatmapRampGex=3,
-                   heatmapColorRampGamma=5)
+# # short format
+# save_path = paste0(output_path, '/GeoMx_vessel_heatmap_short_top',topGenes,'.pdf')
+# bswClst.plotToFile(path=save_path,clst=clst,
+#                    colPheno=colpheno,colDendroPlot=T,colNamesTopJust=F,colNamesTopPlot=F,colPhenoColorMaps = tissue_colors,
+#                    # rowPheno=rowPheno,rowDendroPlot=T,rowNamesLeftJust=F,rowNamesLeftPlot=F,rowPhenoColorMaps = Hoshida_colors, 
+#                    heatmapHeight='golden',
+#                    heatmapAutoZlimMethod='range',
+#                    legendGex=4,fontsize = 15,legendIndent = 0, legendOffset=0.3,
+#                    heatmapColorRampGamma=5,heatmapRampGex=3
+#                    )
+# 
+# # long format
+# save_path = paste0(output_path, '/GeoMx_vessel_heatmap_long_top',topGenes,'.pdf')
+# bswClst.plotToFile(path=save_path,clst=clst,
+#                    colPheno=colpheno,colDendroPlot=T,colNamesTopJust=F,colNamesTopPlot=F,colPhenoColorMaps = tissue_colors, 
+#                    # rowPheno=rowPheno,rowDendroPlot=T,rowPhenoColorMaps = Hoshida_colors,
+#                    rowNamesLeftPlot=T,rowNamesRightPlot=T,
+#                    legendGex=4,fontsize = 15,legendIndent = 0, legendOffset=0.3,
+#                    heatmapAutoZlimMethod='range',heatmapRampGex=3,
+#                    heatmapColorRampGamma=5)
 
 # cut tree
 cto <- bswClst.cutree2(clst$dc, k = 2)
@@ -558,15 +558,15 @@ cts_here <- cts_here[match(rownames(rowPheno), rownames(cts_here)), match(c(tumo
 
 clst<-bswClst.clust(cts_here,medianPolish = F, clusterRows = F, clusterCols = F)
 save_path = paste0(output_path, '/GeoMx_tumor_heatmap_T1T2T3.pdf')
-bswClst.plotToFile(path=save_path,clst=clst,colPheno=colpheno,
-                   rowPheno=rowPheno,
-                   rowDendroPlot=T,colDendroPlot=T,
-                   rowPhenoColorMaps = T1T2T3_colors, 
-                   colPhenoColorMaps = c(tstage_colors,fibrosis_colors,T1T2T3_colors), 
-                   rowNamesLeftPlot=T,rowNamesRightPlot=T,
-                   gex=0.2,
-                   heatmapAutoZlimMethod='range',
-                   heatmapColorRampGamma=5)
+# bswClst.plotToFile(path=save_path,clst=clst,colPheno=colpheno,
+#                    rowPheno=rowPheno,
+#                    rowDendroPlot=T,colDendroPlot=T,
+#                    rowPhenoColorMaps = T1T2T3_colors, 
+#                    colPhenoColorMaps = c(tstage_colors,fibrosis_colors,T1T2T3_colors), 
+#                    rowNamesLeftPlot=T,rowNamesRightPlot=T,
+#                    gex=0.2,
+#                    heatmapAutoZlimMethod='range',
+#                    heatmapColorRampGamma=5)
 
 ##### volcano plot #####
 diffexp <- dea %>% mutate(delabel = case_when((padj_T1_T2 < 0.05 & LFC_T1_T2 < -LFC_thres) ~ 'T2',
@@ -574,23 +574,23 @@ diffexp <- dea %>% mutate(delabel = case_when((padj_T1_T2 < 0.05 & LFC_T1_T2 < -
                                                   TRUE ~ 'Neither'))
 diffexp$lbl<-NA
 diffexp$lbl[diffexp$delabel != 'Neither']<-rownames(diffexp)[diffexp$delabel != 'Neither']
-write.csv(diffexp, paste0(output_path,'/dea_T1_T2.csv'))
-pdf(paste0(output_path,'/Niche_Comp_Volcano.pdf'))
-tmp<-ggplot(data=diffexp,aes(x=LFC_T1_T2,y=-log10(padj_T1_T2),col=delabel, label=lbl)) +
-  geom_point() + theme_classic() +geom_text_repel() +
-  scale_color_manual('subtype',values=T1T2T3_colors$subtype) +
-  labs(title='T1 vs T2 AOIs ', 
-       x = bquote(log[2]('T1/T2')),
-       y = bquote(-log[10]('adjusted p-value'))) + 
-  geom_vline(xintercept=c(-LFC_thres,LFC_thres), linetype = "longdash",col="gray") +
-  geom_hline(yintercept=-log10(.05), linetype = "longdash",col="gray") +
-  guides(color = guide_legend(override.aes = list(size = 3,shape=19)))+
-  theme(axis.text=element_text(size=15),
-      axis.title=element_text(size=15),
-      legend.title = element_text(size=15),
-      legend.text = element_text(size=15))
-
-print(tmp)
+# write.csv(diffexp, paste0(output_path,'/dea_T1_T2.csv'))
+# pdf(paste0(output_path,'/Niche_Comp_Volcano.pdf'))
+# tmp<-ggplot(data=diffexp,aes(x=LFC_T1_T2,y=-log10(padj_T1_T2),col=delabel, label=lbl)) +
+#   geom_point() + theme_classic() +geom_text_repel() +
+#   scale_color_manual('subtype',values=T1T2T3_colors$subtype) +
+#   labs(title='T1 vs T2 AOIs ', 
+#        x = bquote(log[2]('T1/T2')),
+#        y = bquote(-log[10]('adjusted p-value'))) + 
+#   geom_vline(xintercept=c(-LFC_thres,LFC_thres), linetype = "longdash",col="gray") +
+#   geom_hline(yintercept=-log10(.05), linetype = "longdash",col="gray") +
+#   guides(color = guide_legend(override.aes = list(size = 3,shape=19)))+
+#   theme(axis.text=element_text(size=15),
+#       axis.title=element_text(size=15),
+#       legend.title = element_text(size=15),
+#       legend.text = element_text(size=15))
+# 
+# print(tmp)
 
 # T1 vs T3
 myCol=c('black','green','grey')
@@ -601,7 +601,7 @@ diffexp <- dea %>% mutate(delabel = case_when((padj_T1_T3< 0.05 & LFC_T1_T3 < -L
                                                   TRUE ~ 'Neither'))
 diffexp$lbl<-NA
 diffexp$lbl[diffexp$delabel != 'Neither']<-rownames(diffexp)[diffexp$delabel != 'Neither']
-write.csv(diffexp, paste0(output_path,'/dea_T1_T3.csv'))
+# write.csv(diffexp, paste0(output_path,'/dea_T1_T3.csv'))
 tmp<-ggplot(data=diffexp,aes(x=LFC_T1_T3,y=-log10(padj_T1_T3),col=delabel, label=lbl)) +
   geom_point() + theme_classic() +geom_text_repel() +
   scale_color_manual('subtype',values=T1T2T3_colors$subtype) +
@@ -626,22 +626,22 @@ diffexp <- dea %>% mutate(delabel = case_when((padj_T2_T3< 0.05 & LFC_T2_T3 < -L
                                                   TRUE ~ 'Neither'))
 diffexp$lbl<-NA
 diffexp$lbl[diffexp$delabel != 'Neither']<-rownames(diffexp)[diffexp$delabel != 'Neither']
-write.csv(diffexp, paste0(output_path,'/dea_T2_T3.csv'))
-tmp<-ggplot(data=diffexp,aes(x=LFC_T2_T3,y=-log10(padj_T2_T3),col=delabel, label=lbl)) +
-  geom_point() + theme_classic() +geom_text_repel() +
-  scale_color_manual('subtype',values=T1T2T3_colors$subtype) +
-  labs(title='T2 vs T3 AOIs ', 
-      x = bquote(log[2]('T2/T3')),
-      y = bquote(-log[10]('adjusted p-value'))) + 
-  geom_vline(xintercept=c(-LFC_thres,LFC_thres), linetype = "longdash",col="gray") +
-  geom_hline(yintercept=-log10(.05), linetype = "longdash",col="gray")+
-  guides(color = guide_legend(override.aes = list(size = 3, shape=19)))+
-  theme(axis.text=element_text(size=15),
-      axis.title=element_text(size=15),
-      legend.title = element_text(size=15),
-      legend.text = element_text(size=15))
-print(tmp)
-dev.off()
+# write.csv(diffexp, paste0(output_path,'/dea_T2_T3.csv'))
+# tmp<-ggplot(data=diffexp,aes(x=LFC_T2_T3,y=-log10(padj_T2_T3),col=delabel, label=lbl)) +
+#   geom_point() + theme_classic() +geom_text_repel() +
+#   scale_color_manual('subtype',values=T1T2T3_colors$subtype) +
+#   labs(title='T2 vs T3 AOIs ', 
+#       x = bquote(log[2]('T2/T3')),
+#       y = bquote(-log[10]('adjusted p-value'))) + 
+#   geom_vline(xintercept=c(-LFC_thres,LFC_thres), linetype = "longdash",col="gray") +
+#   geom_hline(yintercept=-log10(.05), linetype = "longdash",col="gray")+
+#   guides(color = guide_legend(override.aes = list(size = 3, shape=19)))+
+#   theme(axis.text=element_text(size=15),
+#       axis.title=element_text(size=15),
+#       legend.title = element_text(size=15),
+#       legend.text = element_text(size=15))
+# print(tmp)
+# dev.off()
 ```
 
 # survival correlation
@@ -654,9 +654,9 @@ meta_here <- meta %>% filter(Tissue_Type == 'Tumor') %>%
   filter(subtype != 'Others')
 
 res <- coxph(Surv(time, status) ~ subtype, data = meta_here)
-pdf(paste0(output_path,'/GeoMx_survival.pdf'))
+# pdf(paste0(output_path,'/GeoMx_survival.pdf'))
 print(ggsurvplot(survfit(Surv(time, status) ~ subtype, data = meta_here), pval=TRUE, risk.table = TRUE, palette = unname(T1T2T3_colors$subtype[1:3]),xlab='Time (days)'))
-dev.off()
+# dev.off()
 ```
 ### vessel subtypes 
 ```{r}
@@ -989,7 +989,7 @@ vascularization <- vascularization %>% mutate(ves_perc = 100* Vessel_area/ (Vess
 vascularization <- merge(Hoshida_dominant, vascularization, by = c('Tumor'))
 vascularization <- merge(vascularization, meta[c('Sample_ID_short','ID')], by.x = 'Tumor', by.y='Sample_ID_short')
 
-pdf(paste0(output_path,'/GeoMx_vasc_Hoshida.pdf'))
+# pdf(paste0(output_path,'/GeoMx_vasc_Hoshida.pdf'))
 my_comparisons <- list( c("S1", "S2"), c("S2", "S3"), c("S1", "S3"))
 vascularization %>%
   ggplot(aes(fill=Hoshida_type, y=ves_perc, x=Hoshida_type)) + 
@@ -1011,7 +1011,7 @@ ggplot(vascularization, aes(fill=Hoshida_type, y=ves_perc, x=ID)) +
     theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+
     theme_classic()+ 
     guides(legend.position="bottom")
-dev.off()
+# dev.off()
 ```
 ### vascularization and cancer gene expression
 ```{r}
@@ -1041,7 +1041,7 @@ lm_res <- lm_res %>% mutate(label = case_when(#!is.na(subtype) ~ gene,
                                               pval < 0.05 & abs(slope) > 0.025 ~ gene,
                                               TRUE ~ ''))
 
-pdf(paste0(output_path,'/lm_ves_exp_volcano.pdf'))
+# pdf(paste0(output_path,'/lm_ves_exp_volcano.pdf'))
 p <- lm_res %>% ggplot(aes(x=slope,y=-log(pval),label=label,color=subtype, size = adj.r.squared)) +
   scale_color_manual(values = T1T2T3_colors$subtype) +
   geom_point(alpha=0.5) +
@@ -1096,7 +1096,7 @@ vasc_gene_comp('EPCAM')
 vasc_gene_comp('SOD2')
 vasc_gene_comp('CXCL12')
 
-dev.off()
+# dev.off()
 ```
 
 
@@ -1707,4 +1707,247 @@ surv_obj <- survfit(Surv(time, status) ~ gene_level, data=temp_df)
 
 # Plot the Kaplan-Meier curve
 print(ggsurvplot(surv_obj, pval = TRUE, conf.int = TRUE, risk.table = TRUE, risk.table.col = "strata"))
+```
+
+# L-R analysis using CellChat
+```{r}
+theme_set(theme_bw())
+load(paste0(data_path, '/CellChat/CellChatDB.human.rda'))
+LR_pairs <- CellChatDB.human$interaction[c('ligand','receptor')]
+LR_pairs_small <- LR_pairs[LR_pairs$ligand %in% rownames(Tum),]# only keep the genes in GeoMx
+LR_pairs_small <- LR_pairs_small[LR_pairs_small$receptor %in% rownames(Tum),]# further filtering
+ 
+### ligand in Tumor and receptor in vessel
+cors <- c()
+pvals <- c()
+for (i in 1:nrow(LR_pairs_small)) {
+  LR_pair <- LR_pairs_small[i, ]
+  cor_test <- cor.test(as.numeric(Tum[LR_pair$ligand,]),as.numeric(Ves[LR_pair$receptor,]))
+  cor <- cor_test$estimate
+  pval <- cor_test$p.value
+  cors <- c(cors,cor)
+  pvals <- c(pvals,pval)
+}
+LR_pairs_small$Tum_Ves_cor <- cors
+LR_pairs_small$Tum_Ves_cor_pval <- pvals
+# LR_pairs_small <- LR_pairs_small %>% mutate(Tum_Ves_pairs = case_when(Tum_Ves_cor_pval <0.05 ~ paste(ligand,receptor,sep = '_')))
+
+### repeat the same analysis with ligand in vessel and receptor in tumor
+cors <- c()
+pvals <- c()
+for (i in 1:nrow(LR_pairs_small)) {
+  LR_pair <- LR_pairs_small[i, ]
+  cor_test <- cor.test(as.numeric(Ves[LR_pair$ligand,]),as.numeric(Tum[LR_pair$receptor,]))
+  cor <- cor_test$estimate
+  pval <- cor_test$p.value
+  cors <- c(cors,cor)
+  pvals <- c(pvals,pval)
+}
+LR_pairs_small$Ves_Tum_cor <- cors
+LR_pairs_small$Ves_Tum_cor_pval <- pvals
+# LR_pairs_small <- LR_pairs_small %>% mutate(Ves_Tum_pairs = case_when(Ves_Tum_cor_pval <0.05 ~ paste(ligand,receptor,sep = '_')))
+
+# separate by T1/T2/T3 subtypes
+for (i in 1:3){
+  T_subtype <- get(paste0('tumor_clst',i))
+  R_subtype_pairs <- matching_aoi[matching_aoi$Tumor %in% T_subtype,]
+  T_exp_subtype <- Tum[,colnames(Tum) %in% R_subtype_pairs$Tumor]
+  V_exp_subtype <- Ves[,colnames(Ves) %in% R_subtype_pairs$Vessel]
+  cors <- c()
+  pvals <- c()
+  for (j in 1:nrow(LR_pairs_small)) {
+    LR_pair <- LR_pairs_small[j, ]
+    cor_test <- cor.test(as.numeric(T_exp_subtype[LR_pair$ligand,]),as.numeric(V_exp_subtype[LR_pair$receptor,]))
+    cor <- cor_test$estimate
+    pval <- cor_test$p.value
+    cors <- c(cors,cor)
+    pvals <- c(pvals,pval)
+  }
+  LR_pairs_small <- LR_pairs_small %>% mutate('T{i}_Tum_Ves_cor' := cors)
+  LR_pairs_small <- LR_pairs_small %>% mutate('T{i}_Tum_Ves_cor_pval' := pvals)
+
+# repeat for ves_tum 
+  cors <- c()
+  pvals <- c()
+  for (j in 1:nrow(LR_pairs_small)) {
+    LR_pair <- LR_pairs_small[j, ]
+    cor_test <- cor.test(as.numeric(V_exp_subtype[LR_pair$ligand,]),as.numeric(T_exp_subtype[LR_pair$receptor,]))
+    cor <- cor_test$estimate
+    pval <- cor_test$p.value
+    cors <- c(cors,cor)
+    pvals <- c(pvals,pval)
+  }
+  LR_pairs_small <- LR_pairs_small %>% mutate('T{i}_Ves_Tum_cor' := cors)
+  LR_pairs_small <- LR_pairs_small %>% mutate('T{i}_Ves_Tum_cor_pval' := pvals)
+}
+
+# visualize results
+pdf(paste0(output_path,'/CellChat_cor.pdf'))
+color_scheme <- c("known" = "red", "novel" = "blue", "other" = "black")
+pval_thres <- 0.05
+
+LR_pairs_small %>% 
+  filter(ligand != receptor) %>%
+  mutate(LR_pairs = case_when(Tum_Ves_cor_pval<pval_thres ~paste0(ligand, '_',receptor))) %>%
+  mutate(color = case_when(paste0(ligand,'_',receptor) %in% c('VEGFA_FLT1', 'CSF1_CSF1R')~'known',
+                           paste0(ligand,'_',receptor) %in% c('LGALS9_CD44', 'LGALS9_HAVCR2', 'JAG1_NOTCH3', 'JAG1_NOTCH1', 'CD209_CEACAM1')~'novel',
+                           TRUE ~ 'other')) %>%
+  ggplot(aes(x=Tum_Ves_cor,y=-log10(Tum_Ves_cor_pval), label = LR_pairs, color=color)) +
+  scale_color_manual(values = color_scheme) +
+  geom_point() + ggrepel::geom_text_repel(max.overlaps = Inf, show.legend = FALSE)+
+  labs(x="correlation between ligand in tumor and receptor in vessel",
+       y="-log10(p-value)")
+
+LR_pairs_small %>% 
+  filter(ligand != receptor) %>%
+  mutate(LR_pairs = case_when(Ves_Tum_cor_pval<pval_thres ~paste0(ligand, '_',receptor))) %>%
+  ggplot(aes(x=Ves_Tum_cor,y=-log10(Ves_Tum_cor_pval), label = LR_pairs)) +
+  geom_point() + ggrepel::geom_text_repel(max.overlaps = Inf)+
+  labs(x="correlation between ligand in vessel and receptor in tumor",
+       y="-log10(p-value)")
+
+# wide to long
+# data_long <- gather(LR_pairs_small, key = "variable", value = "value", -c('ligand','receptor'))
+data_long_cor <- gather(LR_pairs_small, key = "LR_group", value = "cor", -c('ligand','receptor'), ends_with("cor"))
+data_long_cor$LR_group <- str_replace(data_long_cor$LR_group, "_cor", "")
+data_long_pval <- gather(LR_pairs_small, key = "LR_group", value = "pval", -c('ligand','receptor'), ends_with("pval"))
+data_long_pval$LR_group <- str_replace(data_long_pval$LR_group, "_cor_pval", "")
+data_long <- merge(data_long_cor,data_long_pval, by=c('ligand','receptor','LR_group'))
+
+pval_thres <- 0.01
+
+data_long <- data_long %>% 
+  filter(!LR_group %in% c('Tum_Ves','Ves_Tum')) %>%
+  filter(ligand != receptor) %>%
+  mutate(LR_pairs = case_when(pval<pval_thres ~paste0(ligand, '_',receptor)))
+
+# data_long %>% ggplot(aes(x = cor, y = -log10(pval), color = LR_group, label=LR_pairs)) +
+#   geom_point() +
+#   scale_color_discrete() +
+#   geom_text_repel(max.overlaps = Inf)
+
+pos <- position_jitter(width = 0.3, seed = 2)
+# tum_ves
+data_long %>% 
+  filter(endsWith(LR_group,'Tum_Ves')) %>% 
+  ggplot(aes(x = LR_group, y = cor, label=LR_pairs)) +
+  geom_boxplot(width=0.5)+
+  theme_minimal() +
+  coord_flip() +
+  geom_label_repel(size=3, max.overlaps = Inf,position = pos,angle=30,min.segment.length = 0)+
+  labs(y="correlation between ligand in tumor and receptor in vessel",
+       x="ROI subtype")
+
+# ves_tumor
+data_long %>% 
+  filter(endsWith(LR_group,'Ves_Tum')) %>% 
+  ggplot(aes(x = LR_group, y = cor, label=LR_pairs)) +
+  geom_boxplot(width=0.5)+
+  theme_minimal() +
+  coord_flip() +
+  geom_label_repel(size=3, max.overlaps = Inf,position = pos,angle=30,min.segment.length = 0)+
+  labs(y="correlation between ligand in vessel and receptor in tumor",
+       x="ROI subtype")
+
+# show correlation by T1T2T3 groups of select L-R pairs
+Tum_genes_interest <- c('VEGFA','CSF1','PDGFA','HLA-DRB3','LGALS9','LGALS9','SPP1','LGALS9') 
+Ves_genes_interest <- c('FLT1','CSF1R','PDGFRB','CD4','HAVCR2','CD44','CD44','PTPRC') 
+
+for (int in 1:length(Tum_genes_interest)){
+  T_gene_exp <- Tum[Tum_genes_interest[int],]
+  V_gene_exp <- Ves[Ves_genes_interest[int],]
+  T_V <- as.data.frame(cbind(t(T_gene_exp),t(V_gene_exp))) %>% rownames_to_column('Tum_AOI')
+  T_V <- T_V %>% mutate(group = case_when(Tum_AOI %in% tumor_clst1 ~ 'T1',
+                                         Tum_AOI %in% tumor_clst2 ~ 'T2',
+                                         Tum_AOI %in% tumor_clst3 ~ 'T3'))
+
+  # Calculate correlations within each group
+  # correlations <- T_V_long %>%
+  #   spread(key = Gene, value = Expression) %>%
+  #   group_by(group) %>%
+  #   summarize(correlation = cor(get(Tum_genes_interest[int]), get(Ves_genes_interest[int]), use = "complete.obs"))
+
+  # p <- ggpaired(T_V_long, x = "Gene", y = "Expression",
+  #         color = "Gene", palette = "jco", 
+  #         line.color = "gray", line.size = 0.4,
+  #         facet.by = "group", short.panel.labs = FALSE,
+  #         id = "Tum_AOI")
+  # 
+  # # Add the correlation values to the plot
+  # x_coords <- seq(1, nrow(correlations))  # Generate x-coordinates for annotations
+  # 
+  # for(i in 1:nrow(correlations)) {
+  #   p <- p + annotate("text", x = i, y = Inf, 
+  #                     label = paste("Correlation:", round(correlations$correlation[i], 2)),
+  #                     data = filter(T_V_long, group == correlations$group[i]), 
+  #                     vjust = 1.5, hjust = 0.5)
+  # }
+  # all ROIs
+  # p <- ggscatter(T_V, x = Tum_genes_interest[int], y = Ves_genes_interest[int],
+  #      add = "reg.line", palette = c("forestgreen", "red"), conf.int = TRUE) +
+  # stat_cor(label.y = .6)
+  # 
+  # print(p)
+  
+  p <- ggplot(data=T_V, aes(x = get(Tum_genes_interest[[int]]), y = get(Ves_genes_interest[[int]]))) +
+    geom_point() +
+    xlab(paste0(Tum_genes_interest[[int]], ' in Tumor AOI')) +
+    ylab(paste0(Ves_genes_interest[[int]], ' in Vessel AOI')) +
+    stat_cor()+
+    geom_smooth(method = "lm", se = FALSE)
+  print(p)
+  # 
+  # T_V_long <- pivot_longer(T_V, 
+  #                     cols = c(Tum_genes_interest[int], Ves_genes_interest[int]), 
+  #                     names_to = "Gene", 
+  #                     values_to = "Expression")
+  
+  # p <- ggpaired(T_V_long, x = "Gene", y = "Expression",
+  #               color = "Gene", palette = c("forestgreen", "red"), 
+  #               line.color = "gray", line.size = 0.4,
+  #               id = "Tum_AOI", short.panel.labs = FALSE) + 
+  # stat_cor(method = "pearson", label.x = 1.5)
+  # print(p)
+
+  # separate by T1T2T3
+  # p <- ggscatter(T_V, x = Tum_genes_interest[int], y = Ves_genes_interest[int],
+  #         add = "reg.line",
+  #        palette = c("forestgreen", "red"),          
+  #         facet.by = "group",
+  #         conf.int = TRUE) +
+  # stat_cor(label.y = .6)
+  # print(p)
+  
+  p <- ggplot(data=T_V, aes(x = get(Tum_genes_interest[[int]]), y = get(Ves_genes_interest[[int]]))) +
+    geom_point() +
+    xlab(paste0(Tum_genes_interest[[int]], ' in Tumor AOI')) +
+    ylab(paste0(Ves_genes_interest[[int]], ' in Vessel AOI')) +
+    facet_wrap(~ group) +
+    stat_cor()+
+    geom_smooth(method = "lm", se = FALSE)
+  print(p)
+  
+  # p <- ggpaired(T_V_long, x = "Gene", y = "Expression",
+  #               color = "Gene", palette = c("forestgreen", "red"), 
+  #               line.color = "gray", line.size = 0.4,
+  #               facet.by = "group", id = "Tum_AOI", short.panel.labs = FALSE) + 
+  # stat_cor(aes(group = group, label = after_stat(r.label)), method = "pearson", label.x = 1.5, p.digits = 3)
+  # print(p)
+  # Add the correlation values to the plot
+  # for(i in 1:nrow(correlations)) {
+  #   p <- p + ggplot2::annotate("text", x = i, y = Inf, 
+  #                     label = paste("Correlation:", round(correlations$correlation[i], 2)),
+  #                     group = correlations$group[i], vjust = 1.5, hjust = 0.5)
+  # }
+}
+
+
+
+
+
+# # LR_pairs_small %>% ggplot(aes(x=Tum_Ves_cor,y=-log10(Tum_Ves_cor_pval), label = Tum_Ves_pairs))
+dev.off()
+# save table
+# write_csv(LR_pairs_small,paste0(output_path,'/CellChat_cor.csv'))
+
 ```
